# Bare_metal_programming

./: README.md
LCD-CMSIS-FreeRTOS/include/: FreeRTOSConfig.h
LCD-CMSIS-FreeRTOS/src/: main.c
LCD-STM32_communication/: LCD Debug.launch  LCD.ioc
LCD-STM32_communication/Core/Inc/: main.h
LCD-STM32_communication/Core/Src/: main.c
STM32-PC_communication/include/: CLK_Timers.h  decoding.h  str_to_blink.h  usart.h
STM32-PC_communication/src/: CLK_Timers.c  decoding.c  main.c  str_to_blink.c  usart.c
UART-CMSIS/: received_message.c  send_message.c
UART-CMSIS/USART1/: platformio.ini
UART-CMSIS/USART1/src/: main.c
blink-Led-FreeRTOS-CMSIS-STM32/include/: FreeRTOSConfig.h
blink-Led-FreeRTOS-CMSIS-STM32/src/: main.c
cmsis_freertos_template/: CMakeLists.txt  arm.cmake
cmsis_freertos_template/inc/: FreeRTOSConfig.h
cmsis_freertos_template/main/: main.c
stm32_bareMetal_template/: CMakeLists.txt  arm.cmake
stm32_bareMetal_template/main/: main.c
temparture measure with ADC-STM32/: LED Debug.launch  LED.ioc
temparture measure with ADC-STM32/Core/Inc/: main.h
temparture measure with ADC-STM32/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c
